syntax = "proto3";

package auth;

import "google/protobuf/empty.proto";

option go_package = "proto/authpb";

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc Refresh (RefreshRequest) returns (AuthResponse);
  rpc SendOtp (SendOtpRequest) returns (BaseResultResponse);
  rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse);
  rpc UpdatePassword (UpdatePasswordRequest) returns (BaseResultResponse);
  rpc MyProfile (MyProfileRequest) returns (MyProfileResponse);

  rpc Ping (google.protobuf.Empty) returns (BaseResultResponse);
}

// Requests
message RegisterRequest {
  string nickname = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  oneof login_method{
    string username = 1;
    string email = 2;
  }
  string password = 3;
}

message RefreshRequest {
  string access_token = 1;
}

message SendOtpRequest {
  string email = 1;
}

message ResetPasswordRequest {
  string email = 1;
  int32 code = 2;
}

message UpdatePasswordRequest {
  string email = 1;
  string password = 2;
  string reset_token = 3;
}

message MyProfileRequest {
  string token = 1;
}

// Responses
message BaseResultResponse {
  string result = 1;
}

message AuthResponse {
  string access_token = 1;
  string error = 2;
}

message ResetPasswordResponse {
  string result = 1;
  string reset_token = 2;
}

message FindProfileBody {
  int64 id = 1;
  string nickname = 2;
  string username = 3;
  string avatar = 4;
  string banner = 5;
  string registered_at = 6;
}

message MyProfileResponse {
  FindProfileBody body = 1;
  string error = 2;
}